Rename project to Sqrzl
